WIP VacancyOwnerRelationship. Builds but may not work

--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
@@ -126,6 +126,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\DatabaseConfigurationProvider.cs" />
+    <Compile Include="Schemas\dbo\VacancyOwnerRelationshipMappersTests.cs" />
+    <Compile Include="Schemas\dbo\VacancyOwnerRelationshipRepositoryTests.cs" />
     <Compile Include="Schemas\Provider\ProviderMappersTests.cs" />
     <Compile Include="Schemas\Provider\ProviderRepositoryTests.cs" />
     <Compile Include="Schemas\Provider\ProviderUserMappersTests.cs" />
