--- a/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
@@ -85,7 +85,7 @@
     <Compile Include="IUpdatableEntity.cs" />
     <Compile Include="Locations\GeoPoint.cs" />
     <Compile Include="Locations\PostalAddress.cs" />
-    <Compile Include="Locations\VacancyLocationAddress.cs" />
+    <Compile Include="Locations\VacancyLocation.cs" />
     <Compile Include="Parties\Employer.cs" />
     <Compile Include="Parties\Provider.cs" />
     <Compile Include="Parties\ProviderSite.cs" />
