Restoring ICandidateVacancyService to fix FAA following refactor

--- a/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Vacancies\VacancySearchSortType.cs" />
     <Compile Include="Vacancies\IVacancySearchService.cs" />
     <Compile Include="Vacancies\TraineeshipSearchResponse.cs" />
+    <Compile Include="Vacancies\ICandidateVacancyService.cs" />
     <Compile Include="VacancyPosting\IVacancyPostingService.cs" />
   </ItemGroup>
   <ItemGroup>
