--- a/src/SFA.Apprenticeships.Application.Vacancy/SFA.Apprenticeships.Application.Vacancy.csproj
+++ b/src/SFA.Apprenticeships.Application.Vacancy/SFA.Apprenticeships.Application.Vacancy.csproj
@@ -86,6 +86,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="CandidateVacancyService.cs" />
     <Compile Include="IAllTraineeshipVacanciesProvider.cs" />
     <Compile Include="IAllApprenticeshipVacanciesProvider.cs" />
     <Compile Include="IVacancyDataProvider.cs" />
