Removed duplicate view. Now only using shared view

--- a/src/SFA.Apprenticeships.Web.Candidate.UnitTests/SFA.Apprenticeships.Web.Candidate.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Candidate.UnitTests/SFA.Apprenticeships.Web.Candidate.UnitTests.csproj
@@ -357,6 +357,7 @@
     <Compile Include="Views\Dashboard\DashboardApprenticeshipTests.cs" />
     <Compile Include="Views\Dashboard\DashboardTestsHelper.cs" />
     <Compile Include="Views\Dashboard\DashboardTraineeshipTests.cs" />
+    <Compile Include="Views\Dashboard\MyApplicationsViewBuilder.cs" />
     <Compile Include="Views\Dashboard\IndexViewBuilder.cs" />
     <Compile Include="Views\Dashboard\MyApplicationsViewModelBuilder.cs" />
     <Compile Include="Views\Dashboard\Us636ViewSubmittedApplicationsTests.cs" />
