--- a/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Applications\ErrorCodes.cs" />
     <Compile Include="Applications\IApprenticeshipApplicationService.cs" />
     <Compile Include="Candidates\ErrorCodes.cs" />
+    <Compile Include="Candidates\ICandidateApplicationService.cs" />
     <Compile Include="Candidates\ICandidateSearchService.cs" />
     <Compile Include="Communications\CommunicationChannels.cs" />
     <Compile Include="Communications\CommunicationRequestHelpers.cs" />
