--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
@@ -128,6 +128,8 @@
     <Compile Include="Schemas\Provider\ProviderUserRepositoryTests.cs" />
     <Compile Include="Schemas\Reference\ReferenceMappersTests.cs" />
     <Compile Include="Schemas\Reference\ReferenceRepositoryTests.cs" />
+    <Compile Include="Schemas\UserProfile\AgencyUserMappersTests.cs" />
+    <Compile Include="Schemas\UserProfile\AgencyUserRepositoryTests.cs" />
     <Compile Include="Schemas\Vacancy\TestBase.cs" />
     <Compile Include="Common\DatabaseInitialiser.cs" />
     <Compile Include="Schemas\Vacancy\ApprenticeshipVacancyRepositoryTests.cs" />
