--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -307,7 +307,6 @@
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\ManagementControllerBase.cs" />
     <Compile Include="Controllers\VacancyController.cs" />
-    <Compile Include="Factory\MyApplicationRoutesFactory.cs" />
     <Compile Include="Mappers\CandidateMappers.cs" />
     <Compile Include="Mediators\AgencyUser\AgencyUserMediator.cs" />
     <Compile Include="Mediators\AgencyUser\AgencyUserMediatorCodes.cs" />
@@ -339,6 +338,8 @@
     <Compile Include="ViewModels\CandidateSearchViewModel.cs" />
     <Compile Include="ViewModels\CandidateSummaryViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\CandidateApprenticeshipApplicationViewModel.cs" />
+    <Compile Include="ViewModels\CandidateTraineeshipApplicationViewModel.cs" />
     <Compile Include="Views\Shared\EditorTemplates\DateViewModel.generated.cs">
       <DependentUpon>DateViewModel.cshtml</DependentUpon>
       <AutoGen>True</AutoGen>
