--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -300,7 +300,6 @@
     <Compile Include="Constants\Pages\ProviderUser\VerifyEmailPageMessages.cs" />
     <Compile Include="Constants\Pages\Provider\AddSitePageMessages.cs" />
     <Compile Include="Constants\RecruitmentRouteNames.cs" />
-    <Compile Include="Constants\ViewModels\ApplicationViewModelMessages.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\ApprenticeshipApplicationController.cs" />
@@ -334,22 +333,6 @@
     <Compile Include="Mediators\Provider\ProviderMediatorCodes.cs" />
     <Compile Include="Providers\ApplicationProvider.cs" />
     <Compile Include="Providers\IApplicationProvider.cs" />
-    <Compile Include="Validators\ApprenticeshipApplicationViewModelValidator.cs" />
-    <Compile Include="ViewModels\Application\AboutYouViewModel.cs" />
-    <Compile Include="ViewModels\Application\ApplicantDetailsViewModel.cs" />
-    <Compile Include="ViewModels\Application\ApplicationSelectionViewModel.cs" />
-    <Compile Include="ViewModels\Application\ApplicationSummaryViewModel.cs" />
-    <Compile Include="ViewModels\Application\ApplicationVacancyViewModel.cs" />
-    <Compile Include="ViewModels\Application\ApplicationViewModel.cs" />
-    <Compile Include="ViewModels\Application\Apprenticeship\ApprenticeshipApplicationViewModel.cs" />
-    <Compile Include="ViewModels\Application\EducationViewModel.cs" />
-    <Compile Include="ViewModels\Application\QualificationViewModel.cs" />
-    <Compile Include="ViewModels\Application\TrainingCourseViewModel.cs" />
-    <Compile Include="ViewModels\Application\VacancyApplicationsFilterTypes.cs" />
-    <Compile Include="ViewModels\Application\VacancyApplicationsSearchViewModel.cs" />
-    <Compile Include="ViewModels\Application\VacancyQuestionAnswersViewModel.cs" />
-    <Compile Include="ViewModels\Application\VacancyApplicationsViewModel.cs" />
-    <Compile Include="ViewModels\Application\WorkExperienceViewModel.cs" />
     <Compile Include="ViewModels\AuthorizeResponseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -598,7 +581,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ViewModels\Vacancy\" />
+    <Folder Include="Validators\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
