--- a/src/SFA.Apprenticeships.Data.Migrate.Console/SFA.Apprenticeships.Data.Migrate.Console.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Console/SFA.Apprenticeships.Data.Migrate.Console.csproj
@@ -43,6 +43,10 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -58,12 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SFA.Apprenticeships.Avms.Domain.Entities\SFA.Apprenticeships.Avms.Domain.Entities.csproj">
-      <Project>{2bce308b-c935-41d9-adb1-2fbf78415abf}</Project>
-      <Name>SFA.Apprenticeships.Avms.Domain.Entities</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Data.Migrate\SFA.Apprenticeships.Data.Migrate.csproj">
       <Project>{73c8a0c0-3b18-4ed6-8d14-15f3e009c26c}</Project>
       <Name>SFA.Apprenticeships.Data.Migrate</Name>
